--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+  ext {
+    kotlin_version = '1.8.0'
+  }
   repositories {
     google()
     mavenCentral()
@@ -6,6 +9,7 @@ buildscript {
 
   dependencies {
     classpath "com.android.tools.build:gradle:7.2.1"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
 
@@ -14,6 +18,7 @@ def isNewArchitectureEnabled() {
 }
 
 apply plugin: "com.android.library"
+apply plugin: 'org.jetbrains.kotlin.android'
 
 if (isNewArchitectureEnabled()) {
   apply plugin: "com.facebook.react"
@@ -69,10 +74,17 @@ android {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
+   buildFeatures {
+     compose true
+   }
+   composeOptions {
+     kotlinCompilerExtensionVersion '1.4.1'
+   }
 }
 
 repositories {
   mavenCentral()
+  mavenLocal()
   google()
 }
 
@@ -81,6 +93,21 @@ dependencies {
   // For < 0.71, this will be from the local maven repo
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
-  implementation "com.facebook.react:react-native:+"
+     implementation 'androidx.activity:activity-compose:1.8.0-alpha07'
+     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+
+     implementation("com.facebook.react:react-android:0.72.3")
+  // FaceLivenessDetector dependency
+     implementation 'com.amplifyframework.ui:liveness:1.2.1'
+
+     // Amplify Auth dependency (unnecessary if using your own credentials provider)
+     implementation 'com.amplifyframework:aws-auth-cognito:2.14.5'
+
+     // Material3 dependency for theming FaceLivenessDetector
+     implementation 'androidx.compose.material3:material3:1.1.2'
+
+     // Support for Java 8 features
+     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+
 }
 
