--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         buildToolsVersion = "34.0.0"
-        minSdkVersion = 21
+        minSdkVersion = 24
         compileSdkVersion = 34
         targetSdkVersion = 34
         ndkVersion = "25.1.8937393"
@@ -10,6 +10,10 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
+        maven { url 'https://www.jitpack.io' }
+        maven { url 'https://repo1.maven.org/maven2' }
+
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
