--- a/android/build.gradle
+++ b/android/build.gradle
@@ -93,7 +93,7 @@ dependencies {
   // For < 0.71, this will be from the local maven repo
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
-     implementation 'androidx.activity:activity-compose:1.8.0-alpha07'
+     implementation 'androidx.activity:activity-compose:1.7.2'
      implementation 'com.facebook.android:facebook-android-sdk:latest.release'
 
      implementation("com.facebook.react:react-android:0.72.3")
@@ -101,7 +101,7 @@ dependencies {
      implementation 'com.amplifyframework.ui:liveness:1.2.1'
 
      // Material3 dependency for theming FaceLivenessDetector
-     implementation 'androidx.compose.material3:material3:1.1.2'
+     implementation 'androidx.compose.material3:material3:1.1.0'
 
      // Support for Java 8 features
      coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
