--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,6 @@
-AwsFaceLiveNess_kotlinVersion=1.7.0
-AwsFaceLiveNess_minSdkVersion=21
-AwsFaceLiveNess_targetSdkVersion=31
-AwsFaceLiveNess_compileSdkVersion=31
-AwsFaceLiveNess_ndkversion=21.4.7075529
+AwsFaceLiveNess_kotlinVersion=1.9.24
+AwsFaceLiveNess_minSdkVersion=24
+AwsFaceLiveNess_targetSdkVersion=34
+AwsFaceLiveNess_compileSdkVersion=35
+AwsFaceLiveNess_ndkversion=26.1.10909125
+android.useAndroidX=true
