--- a/package.json
+++ b/package.json
@@ -62,17 +62,17 @@
     "aws-amplify": "^6.0.18",
     "commitlint": "^17.0.2",
     "del-cli": "^5.1.0",
-    "eslint": "^8.19.0",
+    "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
     "prettier": "3.4.2",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-builder-bob": "^0.20.0",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
-    "typescript": "5.0.4",
+    "typescript": "^5.2.2",
     "@react-native/metro-config": "0.76.3"
   },
   "peerDependencies": {
@@ -150,7 +150,8 @@
       [
         "typescript",
         {
-          "project": "tsconfig.build.json"
+          "project": "tsconfig.build.json",
+          "tsc": "./node_modules/.bin/tsc"
         }
       ]
     ]
