--- a/android/build.gradle
+++ b/android/build.gradle
@@ -74,12 +74,12 @@ android {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
-   buildFeatures {
-     compose true
-   }
-   composeOptions {
-     kotlinCompilerExtensionVersion '1.4.1'
-   }
+  buildFeatures {
+    compose true
+  }
+  composeOptions {
+    kotlinCompilerExtensionVersion = "1.5.15"
+  }
 }
 
 repositories {
